fixed description not showing up

--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -22,11 +22,11 @@
   text-align: center;
   font-size: 9em;
   margin: auto;
-  font-family: 'VT323', monospace;
 }
 
 html {
   height: 100%;
+
   body {
     height: 100%;
     min-height: 100%;
@@ -34,6 +34,7 @@ html {
     width: 100%;
     color: #0e343f;
     margin: auto;
+
     .container {
       margin: auto;
       height: 1100px;
