--- a/styles/poll.scss
+++ b/styles/poll.scss
@@ -33,27 +33,34 @@ $grey: #858788;
     font-size: 6em;
     margin: 20px;
   }
+
   .poll_title {
     font-size: 4em;
     width: 500px;
     text-transform: capitalize;
     word-wrap: break-word;
   }
+
   .description {
     font-size: 25px;
     color: $grey;
     text-align: left;
+    font-size: 2em;
+    margin-top: 10px;
   }
+
   .poll_instruction {
     color: $grey;
-    margin-bottom: 25px;
-    font-size: 2em;
+    margin: 25px 0px;
+    font-size: 1.5em;
   }
+
   ul {
     list-style: none;
     margin-bottom: 30px;
     margin-top: 5px;
     padding-left: 0px;
+
     li {
       font-size: 2.5em;
       width: 400px;
@@ -74,6 +81,7 @@ $grey: #858788;
       }
     }
   }
+
   .vote {
     height: 60px;
     width: 150px;
